--- a/static/css/style.css
+++ b/static/css/style.css
@@ -130,19 +130,53 @@ h3 {
     width: 90%;
 }
 
-.left-posts {
+.post-row {
+    justify-content: space-between;
+}
+
+.left-posts,
+.right-posts {
     width: 24%;
+}
+
+.main-posts {
+    width: 48%;
+    order: 2;
+}
+
+.left-posts {
+    order: 1;
+}
+.right-posts {
+    order: 3;
 }
 
 .all-posts-post-box {
     box-sizing: border-box;
-    border: 1px solid #1A313C;
+    border: 0.5px solid #1A313C;
     border-radius: 2%;
     padding: 20px;
-    margin: 0 0 0 0;
+    margin: 10px;
 }
 .all-posts-post-box img{
-    width: 90%;
+    width: 100%;
+}
+
+.all-posts-post-box h2{
+    font-size: 2.5em;
+    text-align: center;
+    font-family: 'Kanit', sans-serif;
+    font-weight: 600;
+    color: #EFB542;
+    letter-spacing: 1px;
+}
+
+.all-posts-post-box h3{
+    font-size: 1.4em;
+}
+
+.all-posts-post-box p{
+    font-size: 1.2em;
 }
 
 .next-page {
@@ -236,7 +270,7 @@ h3 {
 
 /* Desktops, large screens. */
 @media screen and (max-width:1200px){
-    /* Navigation bar */
+    /* NAV BAR */
     .nav-bar {
         padding: 5px 40px;
     }
@@ -272,6 +306,17 @@ h3 {
     .hero-page {
         background-position-y: -265px;
     }
+    
+    /* BLOG PAGE */
+    .left-posts,
+    .right-posts,
+    .main-posts {
+    width: 50%;
+    }
+    
+    .main-posts {
+        order: 1;
+    }
 
     /* SINGLE BLOG POST PAGE */
     .single-blog-post h1{
@@ -287,12 +332,13 @@ h3 {
 
 /* iPads, Tablets. */
 @media screen and (max-width:768px){
-
+    /* NAV BAR */
     .nav-bar {
         font-size: 1em;
         padding: 5px 12px;
     }
 
+    /* HERO IMAGE */
     .hero-page {
         height: 400px;
         background-position-y: -250px;
@@ -305,12 +351,23 @@ h3 {
     .about-image {
         height: 325px;
     }
+
+    /* BLOG PAGE */
+    .left-posts,
+    .right-posts,
+    .main-posts {
+        width: 100%;
+    }
+
+    .main-posts {
+        order: 1;
+    }
 }
 
 /* Mobile devices. */
 @media screen and (max-width:480px){
 
-    /* Header */
+    /* HEADER */
     .logo-tagline {
         height: 53px;
     }
@@ -319,7 +376,7 @@ h3 {
         font-size: 1.7em;
     }
 
-    /* Nav bar */
+    /* NAV BAR */
     .vanish-mobile {
         display: none;
     }
@@ -351,7 +408,7 @@ h3 {
         color: #1A313C;
     }
 
-    /* Hero image */
+    /* HERO IMAGE */
     .hero-page {
         height: 307px;
         background-position-y: -25px;
