Favicon icon added to site tab.

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,10 +13,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         type="text/css" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <!-- <link rel="apple-touch-icon" sizes="180x180" href="assets/images-pagetab/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images-pagetab/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images-pagetab/favicon-16x16.png">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images-pagetab/favicon.ico" /> -->
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images-pagetab/apple-touch-icon.png' %">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images-pagetab/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images-pagetab/favicon-16x16.png' %}">
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'images-pagetab/favicon.ico' %}" />
     <link rel="manifest" href="/site.webmanifest">
     <title>Print(Statements)</title>
 </head>
