Add view & template for Prints page. Page not rendering.

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,10 +41,10 @@
                     <a href="{% url 'home' %}" class="nav-bar">Home</a>
                 </li>
                 <li>
-                    <a href="#" class="nav-bar">About</a>
+                    <a href="{% url 'about' %}" class="nav-bar">About</a>
                 </li>
                 <li>
-                    <a href="#" class="nav-bar">Prints</a>
+                    <a href="{% url 'prints' %}" class="nav-bar">Prints</a>
                 </li>
                 <li>
                     <a href="{% url 'blog' %}" class="nav-bar">Blog</a>
@@ -74,7 +74,7 @@
                         <a href="{% url 'about' %}" class="nav-bar">About</a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" class="nav-bar">Prints</a>
+                        <a href="{% url 'prints' %}" class="nav-bar">Prints</a>
                     </li>
                     <li class="list-inline-item">
                         <a href="{% url 'blog' %}" class="nav-bar">Blog</a>
