--- a/templates/about.html
+++ b/templates/about.html
@@ -16,7 +16,7 @@
             <p>If you want to see what’s new & happening, head over to our <a href="{% url 'blog' %}">blog</a> for all
                 the latest updates.</p>
             <p>And if you’re ready to have your socks knocked off, check out the prints that are currently available <a
-                    href="#">here</a>.</p>
+                    href="{% url 'prints' %}">here</a>.</p>
         </div>
     </div>
 </div>
