--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,80 +1,82 @@
 {% extends 'base.html' %}
 
 {% block content %}
-        <!-- ALL BLOG ENTRIES -->
-        <div class="col-12 mt-3 blog-posts-area">
-            <div class="row post-row">
-                {% for post in blogpost_list %}
-                    {% if forloop.counter == 1 %}
-                    <div class="main-posts">
-                        <div class="all-posts-post-box">
-                            <a href="{% url 'blog_post' post.slug  %}" class="post-link">
-                                <h2 class="card-title">{{ post.title }}</h2>
-                            </a>
-                            {% if "placeholder" in post.featured_image.url %}
-                            <img src="https://images.pexels.com/photos/4065183/pexels-photo-4065183.jpeg?auto=compress&cs=tinysrgb&w=1600"
-                                alt="default image">
-                            {% else %}
-                            <img src="{{ post.featured_image.url }}" alt="{{ post.title }}">
-                            {% endif %}
-                            <div>
-                                <br>
-                                <h3>Author: {{ post.author }}</h3>
-                                <p>{{ post.excerpt }}</p>
-                                <p>{{ post.created_on}}</p>
-                                <p><i class="far fa-heart"></i>  {{ post.number_of_likes }}</p>
-                            </div>
-                        </div>
-                    </div>
-                    {% elif forloop.counter == 2 %}
-                    <div class="left-posts">
-                        <div class="all-posts-post-box">
-                            <a href="{% url 'blog_post' post.slug  %}" class="post-link">
-                                <h2 class="card-title">{{ post.title }}</h2>
-                            </a>
-                            {% if "placeholder" in post.featured_image.url %}
-                            <img src="https://images.pexels.com/photos/4065183/pexels-photo-4065183.jpeg?auto=compress&cs=tinysrgb&w=1600"
-                                alt="default image">
-                            {% else %}
-                            <img src="{{ post.featured_image.url }}" alt="{{ post.title }}">
-                            {% endif %}
-                            <div>
-                                <br>
-                                <h3>Author: {{ post.author }}</h3>
-                                <p>{{ post.excerpt }}</p>
-                                <p>{{ post.created_on}}</p>
-                                <p><i class="far fa-heart"></i>  {{ post.number_of_likes }}</p>
-                            </div>
-                        </div>
-                    </div>
-                    {% else %}
-                    <div class="right-posts">
-                        <div class="all-posts-post-box">
-                            <a href="{% url 'blog_post' post.slug  %}" class="post-link">
-                                <h2 class="card-title">{{ post.title }}</h2>
-                            </a>
-                            {% if "placeholder" in post.featured_image.url %}
-                            <img src="https://images.pexels.com/photos/4065183/pexels-photo-4065183.jpeg?auto=compress&cs=tinysrgb&w=1600"
-                                alt="default image">
-                            {% else %}
-                            <img src="{{ post.featured_image.url }}" alt="{{ post.title }}">
-                            {% endif %}
-                            <div>
-                                <br>
-                                <h3>Author: {{ post.author }}</h3>
-                                <p>{{ post.excerpt }}</p>
-                                <p>{{ post.created_on}}</p>
-                                <p><i class="far fa-heart"></i>  {{ post.number_of_likes }}</p>
-                            </div>
-                        </div>
-                    </div>
-                    {% endif %}
-                {% endfor %}
+<!-- ALL BLOG ENTRIES -->
+<div class="col-12 mt-3 blog-print-posts-area">
+    <div class="row post-row">
+        {% for post in blogpost_list %}
+        {% if forloop.counter == 1 %}
+        <div class="main-posts">
+            <div class="all-posts-post-box">
+                <a href="{% url 'blog_post' post.slug  %}" class="post-link">
+                    <h2 class="card-title">{{ post.title }}</h2>
+                </a>
+                {% if "placeholder" in post.featured_image.url %}
+                <img src="https://images.pexels.com/photos/4065183/pexels-photo-4065183.jpeg?auto=compress&cs=tinysrgb&w=1600"
+                    alt="default image">
+                {% else %}
+                <img src="{{ post.featured_image.url }}" alt="{{ post.title }}">
+                {% endif %}
+                <div>
+                    <br>
+                    <h3>Author: {{ post.author }}</h3>
+                    <p>{{ post.excerpt }}</p>
+                    <p>{{ post.created_on}}</p>
+                    <p><i class="far fa-heart"></i> {{ post.number_of_likes }}</p>
+                </div>
             </div>
-
         </div>
+        {% elif forloop.counter == 2 %}
+        <div class="left-posts">
+            <div class="all-posts-post-box">
+                <a href="{% url 'blog_post' post.slug  %}" class="post-link">
+                    <h2 class="card-title">{{ post.title }}</h2>
+                </a>
+                {% if "placeholder" in post.featured_image.url %}
+                <img src="https://images.pexels.com/photos/4065183/pexels-photo-4065183.jpeg?auto=compress&cs=tinysrgb&w=1600"
+                    alt="default image">
+                {% else %}
+                <img src="{{ post.featured_image.url }}" alt="{{ post.title }}">
+                {% endif %}
+                <div>
+                    <br>
+                    <h3>Author: {{ post.author }}</h3>
+                    <p>{{ post.excerpt }}</p>
+                    <p>{{ post.created_on}}</p>
+                    <p><i class="far fa-heart"></i> {{ post.number_of_likes }}</p>
+                </div>
+            </div>
+        </div>
+        {% else %}
+        <div class="right-posts">
+            <div class="all-posts-post-box">
+                <a href="{% url 'blog_post' post.slug  %}" class="post-link">
+                    <h2 class="card-title">{{ post.title }}</h2>
+                </a>
+                {% if "placeholder" in post.featured_image.url %}
+                <img src="https://images.pexels.com/photos/4065183/pexels-photo-4065183.jpeg?auto=compress&cs=tinysrgb&w=1600"
+                    alt="default image">
+                {% else %}
+                <img src="{{ post.featured_image.url }}" alt="{{ post.title }}">
+                {% endif %}
+                <div>
+                    <br>
+                    <h3>Author: {{ post.author }}</h3>
+                    <p>{{ post.excerpt }}</p>
+                    <p>{{ post.created_on}}</p>
+                    <p><i class="far fa-heart"></i> {{ post.number_of_likes }}</p>
+                </div>
+            </div>
+        </div>
+        {% endif %}
+        {% endfor %}
+    </div>
+
+</div>
 <br>
+
 <div>
+    <!-- Taken from "I think therefore I blog" -->
     {% if is_paginated %}
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
