--- a/templates/prints.html
+++ b/templates/prints.html
@@ -31,24 +31,25 @@
         {% endif %}
         {% endfor %}
     </div>
-</div>
 
+    <br>
 
-<div>
-    <!-- Taken from "I think therefore I blog" -->
-    {% if is_paginated %}
-    <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
+    <div class="row next-prev-button">
+        {% if is_paginated %}
+        <div>
             {% if page_obj.has_previous %}
-            <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
+            <a href="?page={{ page_obj.previous_page_number }}">
+                <button class="pagination-button">PREV</button>
+            </a>
             {% endif %}
             {% if page_obj.has_next %}
-            <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
-
+            <a href="?page={{ page_obj.next_page_number }}">
+                <button class="pagination-button">NEXT</button>
+            </a>
             {% endif %}
-        </ul>
-    </nav>
+        </div>
     {% endif %}
+    </div>
 </div>
 
 {%endblock%}
