--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,3 @@
-{% load static %}
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,900;1,100;1,200&family=Permanent+Marker&family=Play:wght@400;700&family=Shadows+Into+Light+Two&display=swap');
 
 h1, h2, h3 {
@@ -66,9 +65,7 @@ h3 {
     width: 90%;
     height: 600px;
     margin: 0 auto;
-    /* background: url(../images/gallery-wall.jpg) no-repeat; */
-    /* background: url(/static/images/gallery-wall.jpg) no-repeat; */
-    background: url('{% static "/images/gallery-wall.jpg" %}') no-repeat;
+    background: url(../images/gallery-wall.jpg) no-repeat;
     background-size: 100%;
     background-position-x: 0px;
     background-position-y: -717px;
@@ -108,9 +105,7 @@ h3 {
 .about-image {
     height: 600px;
     margin: 0 auto;
-    /* background: url(../images/three-frames.jpg) no-repeat; */
-    /* background: url(/static/images/three-frames.jpg) no-repeat; */
-    background: url('{% static "/images/three-frames.jpg" %}') no-repeat;
+    background: url(../images/three-frames.jpg) no-repeat;
     background-size: 100%;
     contain: content;
 }
