--- a/templates/about.html
+++ b/templates/about.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+{% load static %}
+
 <div class="col about-page">
     <div class="row">
         <div class="col-md-8 about-image">
