Sixth test - css image

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,7 +66,8 @@ h3 {
     height: 600px;
     margin: 0 auto;
     /* background: url(../images/gallery-wall.jpg) no-repeat; */
-    background: url(/static/images/gallery-wall.jpg) no-repeat;
+    /* background: url(/static/images/gallery-wall.jpg) no-repeat; */
+    background: url("{{ STATIC_URL }}images/gallery-wall.jpg") no-repeat;
     background-size: 100%;
     background-position-x: 0px;
     background-position-y: -717px;
@@ -107,7 +108,8 @@ h3 {
     height: 600px;
     margin: 0 auto;
     /* background: url(../images/three-frames.jpg) no-repeat; */
-    background: url(/static/images/three-frames.jpg) no-repeat;
+    /* background: url(/static/images/three-frames.jpg) no-repeat; */
+    background: url("{{ STATIC_URL }}images/three-frames.jpg") no-repeat;
     background-size: 100%;
     contain: content;
 }
