--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,10 @@
 {% load static %}
 
 <body>
-    <div class="hero-page"></div>
+    <!-- <div class="hero-page"></div> -->
+    <div class="hero-page">
+        <img src="{% static 'images/gallery-wall.jpg' %}" alt="gallery wall">
+    </div>
 </body>
 
 {% endblock %}
