--- a/templates/about.html
+++ b/templates/about.html
@@ -7,6 +7,7 @@
 <div class="col about-page">
     <div class="row">
         <div class="col-md-8 about-image">
+            <img src="{% static 'images/three-frames.jpg' %}" alt="three photo frames">
         </div>
         <div class="col-md-4">
             <h2>About :</h2>
